A few more clean ups for friendlier Rust presentation

--- a/porque-rust.html
+++ b/porque-rust.html
@@ -42,10 +42,10 @@
             }
 
             .reveal ul.empty {
-                list-style: none outside;
+                list-style: none inside;
             }
 
-            li {
+            .revel ul.empty li {
                 display: block;
             }
 
@@ -75,6 +75,10 @@
                 <section>
                     <section data-background="_images/rust-ferris.png" data-header>
                         <h2 class="semi-opaque">Porque Você Deveria Aprender Rust</h2>
+                    </section>
+
+                    <section data-background="_images/rust-ferris.png">
+                        <h2 class="semi-opaque">Porque Você DEVE Aprender Rust</h2>
                     </section>
                 </section>
 
@@ -156,7 +160,7 @@
                     <section>
                         <p>
                             <a href="https://insights.stackoverflow.com/survey/2019">
-                                A languagem mais amada segundo o StackOverflow
+                                A linguagem mais amada segundo o StackOverflow
                                 Survey 2019
                             </a>
 
@@ -887,6 +891,7 @@ test tests::testing ... ok
                     </section>
                 </section>
 
+				<!--
                 <section>
                     <section>
                         <h2>Falando em WASM...</h2>
@@ -904,6 +909,7 @@ test tests::testing ... ok
                         <p>The WebAssembly System Interface</p>
                     </section>
                 </section>
+				-->
 
                 <section>
                     <section>
