--- a/porque-como-opensource.html
+++ b/porque-como-opensource.html
@@ -66,7 +66,7 @@
 
                 <section>
                     <section>
-                        <img src="_images/avatar-20170726.png" alt="Me" style="float:left;width:200px;" class="no-border">
+                        <img src="_images/avatar-20170726.png" alt="Me" style="float:left;width:160px;" class="no-border">
 
                         <div>
                             <ul class="empty">
@@ -208,6 +208,27 @@
 							que explicar que suportar duas formas diferentes seria mais
 							complexo do que esperado e desejado para o projeto. Felizmente,
 							ele entendeu.
+						</aside>
+					</section>
+
+					<section>
+						<h3>Enviar Código</h3>
+
+						<p>
+							Por onde começar?
+						</p>
+
+						<ul>
+							<li>Issue tracker</li>
+							<li class="fragment">Entenda quais são as suas habilidades</li>
+							<li class="fragment">Procure issues nessas habilidades</li>
+							<li class="fragment">Defina um tempo para se dedicar</li>
+							<li class="fragment">Paciência</li>
+						</ul>
+
+						<aside class="notes">
+							Muitos projetos tem, no seu issue tracker, indicadores
+							de problemas mais fáceis para serem resolvidos.
 						</aside>
 					</section>
 
