Removed clashing option, added hacktoberfest

--- a/porque-como-opensource.html
+++ b/porque-como-opensource.html
@@ -125,17 +125,6 @@
 					<section>
 						<h3>Por Que Participar?</h3>
 
-						<h2>"Code rot"</h2>
-						
-						<aside class="notes">
-							Software, com o tempo, se "deteriora". Se não tiver alguém
-							olhando, ele pára de funcionar.
-						</aside>
-					</section>
-
-					<section>
-						<h3>Por Que Participar?</h3>
-
 						<h2>"Scratch an itch"</h2>
 
 						<aside class="notes">
@@ -188,7 +177,7 @@
 
 						<ul>
 							<li>Aclimate-se ao ambiente do projeto <span class="fragment">(IRC, Maillist, Slack, etc)</span></li>
-							<li class="fragment">Seguir os padrões de codificação do projeto <span class="fragment">(HACKING.md)</span></li>
+							<li class="fragment">Seguir os padrões de codificação do projeto <span class="fragment">(HACKING.md, CONTRIBUTING)</span></li>
 							<li class="fragment">Entender os objetivos do projeto <span class="fragment">(isso está na cabeça dos mantenedores)</span></li>
 							<li class="fragment"><strong>Veja o código de conduta.</strong></li>
 						</ul>
@@ -563,6 +552,10 @@
 						<p>
 							-- Mike Hoye, Mozilla
 						</p>
+					</section>
+
+					<section>
+						<img class="stretch" src="_images/hacktoberfest.png" alt="">
 					</section>
 				</section>
 
