--- a/porque-como-opensource.html
+++ b/porque-como-opensource.html
@@ -176,10 +176,10 @@
 						<h3>Enviar Código</h3>
 
 						<ul>
-							<li>Aclimate-se ao ambiente do projeto <span class="fragment">(IRC, Maillist, Slack, etc)</span></li>
+							<li><strong>Veja o código de conduta.</strong></li>
+							<li class="fragment">Aclimate-se ao ambiente do projeto <span class="fragment">(IRC, Maillist, Slack, etc)</span></li>
 							<li class="fragment">Seguir os padrões de codificação do projeto <span class="fragment">(HACKING.md, CONTRIBUTING)</span></li>
 							<li class="fragment">Entender os objetivos do projeto <span class="fragment">(isso está na cabeça dos mantenedores)</span></li>
-							<li class="fragment"><strong>Veja o código de conduta.</strong></li>
 						</ul>
 
 						<p class="fragment"><small>Anedota: Mitter.</small></p>
