--- a/tchelinux.html
+++ b/tchelinux.html
@@ -45,10 +45,6 @@
                 list-style: none outside;
             }
 
-			li {
-				display: block;
-			}
-
             .semi-opaque {
                 background-color: rgba(0, 0, 0, 0.7);
             }
@@ -63,6 +59,141 @@
                         <h2 class="semi-opaque">O Que É o Tchelinux?</h2>
                     </section>
                 </section>
+
+				<section>
+					<section>
+						<h3>O Que É</h3>
+
+						<h2>Grupo de Usuários de Software Livre</h2>
+					</section>
+
+					<aside class="notes">
+						Apesar do  "Linux" no nome, o grupo não é focado
+						somente em Linux. Qualquer tecnologia de software
+						livre pode ser comentada.
+
+						... e a gente nem fala nada de quem vai apresentar
+						usando Windows.
+					</aside>
+				</section>
+
+				<section>
+					<section>
+						<h3>Onde Começou</h3>
+
+						<img class="stretch fragment" src="_images/bar.png" alt="">
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h3>2006</h3>
+
+						<img class="stretch" src="_images/tchelinux-first.png" alt="">
+					</section>
+
+					<section>
+						<h3>2019</h3>
+
+						<img class="stretch" src="_images/tchelinux-2019.png" alt="">
+					</section>
+
+					<section>
+						<h3>2019</h3>
+
+						<small>
+							<table>
+								<tr>
+									<td>Passo Fundo (30/03)</td>
+									<td>Pelotas (24/08)</td>
+								</tr>
+
+								<tr>
+									<td>Sant'Ana do Livramento (13/04)</td>
+									<td>Santo Ângelo (31/08)</td>
+								</tr>
+
+								<tr>
+									<td>Santa Cruz do Sul (27/04)</td>
+									<td>Alegrete (14/09)</td>
+								</tr>
+
+								<tr>
+									<td>Caxias do Sul (11/05)</td>
+									<td>Erechim (28/09)</td>
+								</tr>
+
+								<tr>
+									<td>Rio Grande (25/05)</td>
+									<td>Bagé (05/10)</td>
+								</tr>
+
+								<tr>
+									<td>Camaquã (08/06)</td>
+									<td>Bento Gonçalvez (19/10)</td>
+								</tr>
+
+								<tr>
+									<td>Novo Hamburgo (15/06)</td>
+									<td>Santa Maria (09/11)</td>
+								</tr>
+
+								<tr>
+									<td colspan="2" align="center"><strong>Porto Alegre (14/12)</strong></td>
+								</tr>
+							</table>
+						</small>
+					</section>
+
+					<section>
+						<h3>2019</h3>
+
+						<ul>
+							<li>Evento de número <strong>100</strong>: Bagé.</li>
+							<li>17 palestras</li>
+							<li>163 participantes</li>
+							<li>94 kg de alimentos arrecadados</li>
+							<li>10 cidades representadas (Aceguá, Alegrete,
+								Bagé, Candiota, Dom Pedrito, Hulha Negra,
+								Pinheiro Machado, Porto Alegre, Rivera e
+								Sant’Ana do Livramento)</li>
+						</ul>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h3>Objetivos</h3>
+
+						<ul>
+							<li class="fragment">Fomentar o crescimento da região</li>
+							<li class="fragment">Disseminar o conhecimento sobre software livre</li>
+							<li class="fragment">Ajudar entidades da região</li>
+						</ul>
+					</section>
+					
+					<section>
+						<h4>O evento tem entrada franca, porém os participantes
+							são encorajados a doar 2kg de alimentos não
+							perecíveis (exceto sal), que são doados a
+							instituições de caridade da região.</h4>
+					</section>
+
+					<section>
+						<h3>100 eventos em 13 anos</h3>
+						<h3 class="fragment">22 cidades</h3>
+						<h3 class="fragment">~19 toneladas de alimentos arrecadados e distribuídos</h3>
+						<h4 class="fragment">36.408 quilômetros viajados</h4>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<img class="stretch" src="_images/tchelinux-poa2019.jpg" alt="">
+
+						<h4 class="fragment">CFP até 20 de Outubro de 2019.</h4>
+					</section>
+				</section>
 
                 <section data-background='_images/thats-all-folks.jpg'>
                     <section>
