Added some notes

--- a/tchelinux.html
+++ b/tchelinux.html
@@ -82,6 +82,24 @@
 						<h3>Onde Começou</h3>
 
 						<img class="stretch fragment" src="_images/bar.png" alt="">
+
+						<aside class="notes">
+							O Tchelinux nasceu em uma mesa de bar.
+
+							Pelo que conta o Leo, quando trabalhava na RedHat de
+							Porto Alegre, o pessoal saia do trabalho e ia pro bar.
+							Numa discussão, um dos colegas dele, que trabalhava
+							no kernel do Linux, explicou como o filesystem funciona
+							(e tem um guardanapo com todo o esquemático do systema
+							de filesystem do kernel, mas o Leo não conseguiu me
+							passar uma foto a tempo pra essa apresentação).
+
+							Depois de ouvir toda a explicação de como funciona,
+							o Leo comentou "Bah, mas isso dá um tema de uma
+							apresentação!" E assim nasceu a ideia de fazer um
+							evento sobre o que o pessoal sabia sobre software
+							livre.
+						</aside>
 					</section>
 				</section>
 
@@ -90,12 +108,36 @@
 						<h3>2006</h3>
 
 						<img class="stretch" src="_images/tchelinux-first.png" alt="">
+
+						<aside class="notes">
+							O primeiro evento do Tchelinux aconteceu em 2006. Eles
+							conseguiram um patrocinio e fizeram camisetas, stickers,
+							buttons e tudo mais que tem nos eventos tradicionais.
+
+							Só que o evento terminou e ainda tinham camisetas sobrando,
+							stickers sobrando, buttons sobrando. E, como diz o Leo:
+
+							"O que a gente faz quando sobram coisas de um evento? A
+							gente faz outro evento!"
+						</aside>
 					</section>
 
 					<section>
 						<h3>2019</h3>
 
 						<img class="stretch" src="_images/tchelinux-2019.png" alt="">
+
+						<aside class="notes">
+							Em 2019, 13 anos depois do primeiro evento, o Tchelinux
+							finalmente conseguiu presença em todos os cantos do estado
+							do Rio Grande do Sul.
+
+							O Tchelinux não tem sede, não tem um "local onde o
+							evento sempre acontece" e não é um evento por ano.
+							O Tchelinux é itinerante, e normalmente nós
+							procuramos (bom, o Léo procura) instituições de
+							ensino pra servir de local do evento.
+						</aside>
 					</section>
 
 					<section>
@@ -143,6 +185,22 @@
 								</tr>
 							</table>
 						</small>
+
+						<aside class="notes">
+							Esse é o calendário desse ano. Como eu falei, não é
+							apenas um evento por ano.
+							
+							E é importante notar que ainda vai ter um evento em 
+							Porto Alegre e o CFP ainda está aberto. Se você,
+							algum dia, pensou em fazer uma apresentação e ela
+							envolve software livre, esse é o melhor lugar pra
+							fazer ela.
+
+							(PS: Esse fim-de-semana eu vou estar em Bento Gonçalvez,
+							então se você não tiver planos pro sábado, pode ir lá.
+							Santa Maria eu também vou estar, mas é um pouquinho 
+							mais longe.)
+						</aside>
 					</section>
 
 					<section>
@@ -158,6 +216,15 @@
 								Pinheiro Machado, Porto Alegre, Rivera e
 								Sant’Ana do Livramento)</li>
 						</ul>
+
+						<aside class="notes">
+							O último evento do Tchelinux que aconteceu foi
+							em Bagé, o evento número 100 desde 2006.
+
+							Tivemos 17 palestras, 163 participantes (não
+							contando os palestrantes), arrecadamos 94kg de
+							alimentos e foram pessoas de 10 cidades diferentes.
+						</aside>
 					</section>
 				</section>
 
@@ -170,6 +237,10 @@
 							<li class="fragment">Disseminar o conhecimento sobre software livre</li>
 							<li class="fragment">Ajudar entidades da região</li>
 						</ul>
+
+						<aside class="notes">
+							Por que o Tchelinux existe?
+						</aside>
 					</section>
 					
 					<section>
@@ -177,6 +248,16 @@
 							são encorajados a doar 2kg de alimentos não
 							perecíveis (exceto sal), que são doados a
 							instituições de caridade da região.</h4>
+
+						<aside class="notes">
+							Quando falamos de "Ajudar entidades da região" é
+							justamente a questão do pedido de 2kg para entrar
+							(não obrigatório).
+
+							Quando o pessoal faz a doação, o pessoal da região
+							escolhe uma entidade de lá para receber os
+							alimentos arrecadados.
+						</aside>
 					</section>
 
 					<section>
@@ -184,6 +265,12 @@
 						<h3 class="fragment">22 cidades</h3>
 						<h3 class="fragment">~19 toneladas de alimentos arrecadados e distribuídos</h3>
 						<h4 class="fragment">36.408 quilômetros viajados</h4>
+
+						<aside class="notes">
+							Nesses 13 anos, pra mim, o número mais importante
+							são as quase 19 toneladas de alimentos arrecadados
+							e distribuídos.
+						</aside>
 					</section>
 				</section>
 
@@ -192,6 +279,20 @@
 						<img class="stretch" src="_images/tchelinux-poa2019.jpg" alt="">
 
 						<h4 class="fragment">CFP até 20 de Outubro de 2019.</h4>
+
+						<a href="https://poa.tchelinux.org/#!index.md">https://poa.tchelinux.org/</a>
+
+						<aside class="notes">
+							E, como eu falei, O CFP do Tchelinux de Porto Alegre
+							vai até o dia 20 de outubro; então esse é o momento
+							de mandar a sua palestra.
+
+							E eu também gostaria de pedir pra que quem achar
+							que tem alguma coisa interessante, que mande a sua 
+							palestra. Quanto mais palestras, maior vai ser
+							a quantidade de pessoas que vão aparecer e maior
+							vai ser a quantidade de alimentos arrecadados.
+						</aside>
 					</section>
 				</section>
 
