Added my telegram contact in the most used presentations

--- a/fugindo-com-python-2.html
+++ b/fugindo-com-python-2.html
@@ -86,7 +86,8 @@
                         <div>
                             <ul class="empty">
                                 <li>Júlio Biason</li>
-                                <li>https://functional.cafe/@juliobiason</li>
+								<li><a href="https://functional.cafe/@juliobiason">https://functional.cafe/@juliobiason</a></li>
+								<li><a href="https://t.me/juliobiason">https://t.me/juliobiason</a></li>
                                 <li>julio.biason@pm.me</li>
                                 <li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
                             </ul>
@@ -1075,8 +1076,8 @@ pares = (num
                     <section>
                         <div class="semi-opaque">
                             <ul class="empty">
-                                <li>Júlio Biason</li>
-                                <li>https://functional.cafe/@juliobiason</li>
+								<li><a href="https://functional.cafe/@juliobiason">https://functional.cafe/@juliobiason</a></li>
+								<li><a href="https://t.me/juliobiason">https://t.me/juliobiason</a></li>
                                 <li>julio.biason@pm.me</li>
                                 <li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
                             </ul>
