--- a/porque-rust.html
+++ b/porque-rust.html
@@ -95,7 +95,8 @@
                         <div>
                             <ul class="empty">
                                 <li>Júlio Biason</li>
-                                <li>https://functional.cafe/@juliobiason</li>
+								<li><a href="https://functional.cafe/@juliobiason">https://functional.cafe/@juliobiason</a></li>
+								<li><a href="https://t.me/juliobiason">https://t.me/juliobiason</a></li>
                                 <li>julio.biason@pm.me</li>
                                 <li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
                             </ul>
@@ -986,8 +987,8 @@ fn call_isan(num: &amp;str) -&gt; Result&lt;Success, Error&gt; {
                 <section data-background='_images/thats-all-folks.jpg'>
                     <div class="semi-opaque">
                         <ul class="empty">
-                            <li>Júlio Biason</li>
-                            <li>https://functional.cafe/@juliobiason</li>
+							<li><a href="https://functional.cafe/@juliobiason">https://functional.cafe/@juliobiason</a></li>
+							<li><a href="https://t.me/juliobiason">https://t.me/juliobiason</a></li>
                             <li>julio.biason@pm.me</li>
                             <li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
                         </ul>
