--- a/intro-stream-processing.html
+++ b/intro-stream-processing.html
@@ -91,7 +91,8 @@
                         <div>
                             <ul class="empty">
                                 <li>Júlio Biason</li>
-								<li>https://functional.cafe/@juliobiason</li>
+								<li><a href="https://functional.cafe/@juliobiason">https://functional.cafe/@juliobiason</a></li>
+								<li><a href="https://t.me/juliobiason">https://t.me/juliobiason</a></li>
                                 <li>julio.biason@pm.me</li>
                                 <li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
                             </ul>
@@ -625,8 +626,8 @@ light.switch()</code></pre>
 
                 <section data-background='_images/thats-all-folks.jpg'>
 					<ul class="empty fragment semi-opaque">
-						<li>Júlio Biason</li>
-						<li>https://functional.cafe/@juliobiason</li>
+						<li><a href="https://functional.cafe/@juliobiason">https://functional.cafe/@juliobiason</a></li>
+						<li><a href="https://t.me/juliobiason">https://t.me/juliobiason</a></li>
 						<li>julio.biason@pm.me</li>
 						<li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
 					</ul>
